--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <p>Hello 大家好</p>
-<p>我是xieyeheng，这是我的个人网站。 </p>
+<p>我是xieyeheng，这是我的网站。 </p>
+<p>虽然它有点简陋 </p>
+<p>但我学习html和css后它会精致了</p>
+<p>但是现在没时间</p>
+<p>过几个月后学</p>
