--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
-<p>Hello 大家好</p>
-<p>我是xieyeheng，这是我的网站。 </p>
-<p>虽然它有点简陋 </p>
-<p>但我学习html和css后它会精致了</p>
-<p>但是现在没时间（准备在CSP-J中摆烂）</p>
-<p>过几个月后学</p>
-<p> </p>
-<p> </p>
-<p> </p>
-<p> </p>
+<!DOCTYPE html>
+<html lang="en">
+
+
+
+</html>
+<!--作者：xieyeheng-->
+<body background="bg.png">
+<html>
+<head>
+<meta charset="utf-8">
+<title>个人主页封面</title>
+<link rel="png" href="enemy3.png" type="png"/>  
+</head>
+<body>
+<body bgcolor="Tan"/>
+
+
+<font color="blue">
+
+<h1>谢烨恒个人主页封面</h1>
+
+
+
+<a href = "url">title<a/>
+<marquee>横幅</marquee>
+
+
+
+
+
+
+
+
