--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 </html>
 <!--作者：xieyeheng-->
 <body background="bg.png">
 <html>
 <head>
 <meta charset="utf-8">
-<title>个人主页封面</title>
+<title>主页</title>
 <link rel="png" href="enemy3.png" type="png"/>  
 </head>
 <body>
@@ -18,7 +16,7 @@
 
 <font color="blue">
 
-<h1>谢烨恒个人主页封面</h1>
+<h1>xieyeheng的弱鸡网站</h1>
 
 
 
