--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <title>主页</title>
-<link rel="png" href="enemy3.png" type="png"/>  
+<link rel="png" href="图片文件" type="png"/>  
 </head>
 <body>
 <body bgcolor="Tan"/>
