--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-</html>
 <!--作者：xieyeheng-->
 <body background="bg.jpg">
-<html>
-<head>
 <meta charset="utf-8">
-<title>主页</title>
-<link rel="png" href="bg.jpg" type="jpg"/>  
-</head>
-<body>
 <body bgcolor="Tan"/>
-
-
-<font color="blue">
-
+<font color="black">
+<title>主页</title>
 <h1>xieyeheng的弱鸡网站</h1>
-
-
-
-<a href = "url">title<a/>
-<marquee>横幅</marquee>
-
-
-
-
-
-
-
+<p>-----分割线-----</p>
+<p>你可以在一下地方找到我：</p>
+<p> · 补充</p>
+<p> · 补充</p>
+<p> · 补充</p>
+<marquee>本页面最后由xieyeheng维护与2022.10.14</marquee>
 
