--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <h1>xieyeheng的弱鸡网站</h1>
 <p>-----分割线-----</p>
 <p>你可以在一下地方找到我：</p>
-<p> · 补充</p>
-<p> · 补充</p>
-<p> · 补充</p>
+<p>洛谷 · xieyeheng</p>
+<p>Github · xieyeheng</p>
+<p>Facebook · xieyeheng@outlook.com</p>
+<p>Twitter · 中国之鳖</p>
+<p>Discord · xieyeheng@outlook.com</p>
 <marquee>本页面最后由xieyeheng维护与2022.10.14</marquee>
 
