--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <h1>xieyeheng的弱鸡网站</h1>
 <p>-----分割线-----</p>
 <p>你可以在一下地方找到我：</p>
+<p> </p>
 <p>洛谷 · xieyeheng</p>
 <p>Github · xieyeheng</p>
 <p>Facebook · xieyeheng@outlook.com</p>
 <p>Twitter · 中国之鳖</p>
 <p>Discord · xieyeheng@outlook.com</p>
+<p>WeChat · 13316193186</p>
+<p> </p>
+  <p>一些网站</p>
+  <a href="https://www.luogu.com.cn/">洛谷</a>
 <marquee>本页面最后由xieyeheng维护与2022.10.14</marquee>
 
