--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 <p> </p>
   <p>一些网站</p>
   <a href="https://www.luogu.com.cn/">洛谷</a>
-<marquee>本页面最后由xieyeheng维护与2022.10.14</marquee>
+  <a href="https://www.jikipedia.com.cn/">小鸡词典</a>
+<marquee>本页面最后由xieyeheng维护于2022.10.14</marquee>
 
