--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p>-----分割线-----</p>
 <p>你可以在一下地方找到我：</p>
 <p> </p>
-<p>洛谷 · xieyeheng</p>
+<a href="https://www.luogu.com.cn/">洛谷</a><p> · xieyeheng</p>
 <p>Github · xieyeheng</p>
 <p>Facebook · xieyeheng@outlook.com</p>
 <p>Twitter · 中国之鳖</p>
