--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 <p>-----分割线-----</p>
 <p>你可以在一下地方找到我：</p>
 <p> </p>
-<a href="https://www.luogu.com.cn/">洛谷</a><p> · xieyeheng</p>
-<p>Github · xieyeheng</p>
-<p>Facebook · xieyeheng@outlook.com</p>
-<p>Twitter · 中国之鳖</p>
-<p>Discord · xieyeheng@outlook.com</p>
-<p>WeChat · 13316193186</p>
-<p> </p>
-  <p>一些网站</p>
-  <a href="https://www.luogu.com.cn/">洛谷</a>
-  <a href="https://www.jikipedia.com.cn/">小鸡词典</a>
-<marquee>本页面最后由xieyeheng维护于2022.10.14</marquee>
+<a href="https://www.luogu.com.cn/">洛谷 · xieyeheng</a>
+<a href="https://github.com/">Github · xieyeheng</a>
+<a href="https://facebook.com/">Facebook · xieyeheng</a>
+<a href="https://twitter.com/">Twitter · xieyeheng</a>
+<a href="https://discord.com/">Discord · xieyeheng</a>
+<a href="https://github.com/">Github · xieyeheng</a>
+<a href="https://wechat.com/">Wechat · 13316193186</a>
 
-<p>tmp</p>
+<p>一些网站</p>
+<a href="https://www.luogu.com.cn/">洛谷</a>
+<a href="https://www.jikipedia.com.cn/">小鸡词典</a>
+<marquee>本页面最后由xieyeheng维护于2022.10.14</marquee>
