--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>主页</title>
 <h1>xieyeheng的弱鸡网站</h1>
 <p>-----分割线-----</p>
-<p>你可以在一下地方找到我：</p>
+<p>你可以在以下地方找到我：</p>
 <p> </p>
 <a href="https://www.luogu.com.cn/">洛谷 · xieyeheng</a>
   <p> </p>
@@ -26,6 +26,7 @@
   <p> </p>
 
 <h2>了解我？</h2>
-  <a href="https://xieyeheng.github.io/ · 13316193186</a>
+  <a href="https://xieyeheng.github.io/dormitory.html">我们宿舍</a>
   <p> </p>
+
 <marquee>本页面最后由xieyeheng维护于2022.10.14</marquee>
