--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <font color="black">
 <title>主页</title>
 <h1>xieyeheng的弱鸡网站</h1>
-<p>-----分割线-----</p>
+<p>----------分割线----------</p>
 <p>你可以在以下地方找到我：</p>
 <p> </p>
 <a href="https://www.luogu.com.cn/">洛谷 · xieyeheng</a>
