--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <a href="https://wechat.com/">Wechat · 13316193186</a>
   <p> </p>
 
-<h2>了解我？</h2>
-  <a href="https://xieyeheng.github.io/dormitory.html">我们宿舍</a>
-  <p> </p>
+<h2>想了解我？</h2>
+<a href="https://xieyeheng.github.io/dormitory.html">我们宿舍</a>
+<p> </p>
 
 <marquee>本页面最后由xieyeheng维护于2022.10.14</marquee>
