--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <p> </p>
 <a href="https://github.com/">Github · xieyeheng</a>
   <p> </p>
-<a href="https://facebook.com/">Facebook · xieyeheng</a>
+<a href="https://facebook.com/">Facebook · xieyeheng@outlook.com</a>
   <p> </p>
-<a href="https://twitter.com/">Twitter · xieyeheng</a>
+<a href="https://twitter.com/">Twitter · 中国之鳖</a>
   <p> </p>
-<a href="https://discord.com/">Discord · xieyeheng</a>
+<a href="https://discord.com/">Discord · xieyeheng@outlook.com</a>
   <p> </p>
 <a href="https://github.com/">Github · xieyeheng</a>
   <p> </p>
