--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   <p> </p>
 <a href="https://wechat.com/">Wechat · 13316193186</a>
   <p> </p>
+<a href="https://bilibili.com/">Bilibili · _砂哔</a>
+  <p> </p>
+<a href="https://jikipadie.com/">小鸡词典 · 母鸡词典</a>
+  <p> </p>
 
 <h2>想了解我？</h2>
 <a href="https://xieyeheng.github.io/dormitory.html">我们宿舍</a>
