--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>主页</title>
 <h1>xieyeheng的弱鸡网站</h1>
 <p>----------分割线----------</p>
-<p>你可以在以下地方找到我：</p>
+<h2>你可以在以下地方找到我：</h2>
 <p> </p>
 <a href="https://www.luogu.com.cn/">洛谷 · xieyeheng</a>
   <p> </p>
@@ -32,5 +32,12 @@
 <h2>想了解我？</h2>
 <a href="https://xieyeheng.github.io/dormitory.html">我们宿舍</a>
 <p> </p>
-
-<marquee>本页面最后由xieyeheng维护于2022.10.14</marquee>
+<h2>要联系我？</h2>
+<p>电子邮件：</p>
+<a href= "mailto:xieyeheng@outlook.com">发送电子邮件到我的Outlook邮箱（推荐）</a>
+<p> </p>
+<a href= "mailto:xieyeheng1@outlook.com">发送电子邮件到我的备用Outlook邮箱（不推荐）</a>
+<p> </p>
+<a href= "mailto:xieyeheng1@gmail.com">发送电子邮件到我的Gmail邮箱（不推荐）</a>
+<p> </p>
+<marquee>本页面最后由xieyeheng维护于2022.10.15</marquee>
