--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 <p>电子邮件：</p>
 <a href= "mailto:xieyeheng@outlook.com">发送电子邮件到我的Outlook邮箱（推荐）</a>
 <p> </p>
-<a href= "mailto:xieyeheng1@outlook.com">发送电子邮件到我的备用Outlook邮箱（不推荐）</a>
+<a href= "mailto:xieyeheng1@outlook.com">发送电子邮件到我的备用Outlook邮箱</a>
 <p> </p>
 <a href= "mailto:xieyeheng1@gmail.com">发送电子邮件到我的Gmail邮箱（不推荐）</a>
 <p> </p>
+<a href="https://xieyeheng.github.io/why-not-gmail.html/">关于为什么不推荐发到我的Gmail?</a>
 <marquee>本页面最后由xieyeheng维护于2022.10.15</marquee>
