--- a/index.html
+++ b/index.html
@@ -40,5 +40,5 @@
 <p> </p>
 <a href= "mailto:xieyeheng1@gmail.com">发送电子邮件到我的Gmail邮箱（不推荐）</a>
 <p> </p>
-<a href="https://xieyeheng.github.io/why-not-gmail.html/">关于为什么不推荐发到我的Gmail?</a>
+<a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a>
 <marquee>本页面最后由xieyeheng维护于2022.10.15</marquee>
