--- a/why-not-gmail.html
+++ b/why-not-gmail.html
@@ -1,4 +1,7 @@
+<body background="bg.jpg">
+<body bgcolor="Tan">
 <h1>原因如下：</h1>
 <p>因为不番羽墙用不了Gmail，想更新邮件还要翻墙</p>
 <p>划掉：虽然我经常番羽墙</p>
 <p>有时间我会出一个番羽墙的教程的</p>
+<a href="https://xieyeheng.github.io/proxy.html">翻墙教程传送门</a>
