--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <font color="black">
 
 <meta charset="utf-8">
-<body bgcolor="Tan"/>
+<body bgcolor="Tan">
 
 <title>主页</title>
 <h1>xieyeheng的弱鸡网站</h1>
