--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <!--作者：xieyeheng-->
   
 <body background="bg.jpg">
+<body bgcolor="Tan">
 <font color="black">
 
 <meta charset="utf-8">
-<body bgcolor="Tan">
-
 <title>主页</title>
 <h1>xieyeheng的弱鸡网站</h1>
 <p>----------分割线----------</p>
@@ -32,9 +31,21 @@
 <a href="https://jikipadie.com/">小鸡词典 · 母鸡词典</a>
   <p> </p>
 
-<h2>想了解我？</h2>
+<h2>我的一些文章</h2>
+<a href="https://xieyeheng.github.io/proxy.html">如何翻墙？</a>
+<p> </p>
+<a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a> 
+<p> </p>
+<p>还有一些文章在洛谷博客上，有时间会转移</p>
+<a href="https://xieyeheng.blog.luogu.com.cn">我的洛谷博客</a> 
+<p> </p>
+  
+<h2>想了解我和我附近的人？</h2>
 <a href="https://xieyeheng.github.io/dormitory.html">我们宿舍</a>
 <p> </p>
+<a href="https://xieyeheng.github.io/primary-school-classmate.html">我的小学同学</a>
+<p> </p>
+  
 <h2>要联系我？</h2>
 <p>电子邮件：</p>
 <a href= "mailto:xieyeheng@outlook.com">发送电子邮件到我的Outlook邮箱（推荐）</a>
@@ -43,5 +54,6 @@
 <p> </p>
 <a href= "mailto:xieyeheng1@gmail.com">发送电子邮件到我的Gmail邮箱（不推荐）</a>
 <p> </p>
+
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a>
 <marquee>本页面最后由xieyeheng维护于2022.10.15</marquee>
