--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <p>----------分割线----------</p>
 <h2>你可以在以下地方找到我：</h2>
 <p> </p>
-<a href="https://www.luogu.com.cn/">洛谷 · xieyeheng</a>
+<a href="https://www.luogu.com.cn/user/635555">洛谷 · xieyeheng</a>
   <p> </p>
-<a href="https://github.com/">Github · xieyeheng</a>
+<a href="https://github.com/xieyeheng">Github · xieyeheng</a>
   <p> </p>
 <a href="https://facebook.com/">Facebook · xieyeheng@outlook.com</a>
   <p> </p>
@@ -22,13 +22,11 @@
   <p> </p>
 <a href="https://discord.com/">Discord · xieyeheng@outlook.com</a>
   <p> </p>
-<a href="https://github.com/">Github · xieyeheng</a>
-  <p> </p>
 <a href="https://wechat.com/">Wechat · 13316193186</a>
   <p> </p>
-<a href="https://bilibili.com/">Bilibili · _砂哔</a>
+<a href="https://space.bilibili.com/1369641897?spm_id_from=333.337.0.0">Bilibili · _砂哔</a>
   <p> </p>
-<a href="https://jikipadie.com/">小鸡词典 · 母鸡词典</a>
+<a href="https://jikipedia.com/definitions/user/916113797">小鸡词典 · 母鸡词典</a>
   <p> </p>
 
 <h2>我的一些文章</h2>
