--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <p> </p>
 <a href="https://jikipedia.com/definitions/user/916113797">小鸡词典 · 母鸡词典</a>
   <p> </p>
+<a href="https://music.163.com/#/user/home?id=5086169358">>网易云音乐 · _砂哔</a>
+  <p> </p>
 
 <h2>我的一些文章</h2>
 <a href="https://xieyeheng.github.io/proxy.html">如何翻墙？</a>
