--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
   <p> </p>
 <a href="https://facebook.com/">Facebook · xieyeheng@outlook.com</a>
   <p> </p>
+<a href="https://twitch.com/">Twitch · vellichor0979</a>
+  <p> </p>
 <a href="https://twitter.com/">Twitter · 中国之鳖</a>
   <p> </p>
 <a href="https://discord.com/">Discord · xieyeheng@outlook.com</a>
   <p> </p>
-<a href="https://wechat.com/">Wechat · 13316193186</a>
+<a href="https://wechat.com/">Wechat · Vellichor</a>
   <p> </p>
 <a href="https://space.bilibili.com/1369641897?spm_id_from=333.337.0.0">Bilibili · _砂哔</a>
   <p> </p>
