--- a/why-not-gmail.html
+++ b/why-not-gmail.html
@@ -2,6 +2,7 @@
 <body bgcolor="Tan">
 <h1>原因如下：</h1>
 <p>因为不番羽墙用不了Gmail，想更新邮件还要翻墙</p>
+<p>划掉：虽然用网易邮箱大师可以不用翻墙收发Gmail</p>
 <p>划掉：虽然我经常番羽墙</p>
 <p>有时间我会出一个番羽墙的教程的</p>
 <a href="https://xieyeheng.github.io/proxy.html">翻墙教程传送门</a>
