--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 <p> </p>
 <a href="https://xieyeheng.github.io/primary-school-classmate.html">我的小学同学</a>
 <p> </p>
+<a href="https://xieyeheng.github.io/school.html">我们学校</a>
+<p> </p>
   
 <h2>要联系我？</h2>
 <p>电子邮件：</p>
