--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <p> </p>
 <a href= "mailto:xieyeheng1@gmail.com">发送电子邮件到我的Gmail邮箱（不推荐）</a>
 <p> </p>
+<a href= "mailto:xieyeheng@kindle.cn">发送电子邮件到我的Amazon Kindle邮箱（仅我的信任列表）</a>
+<p> </p>
 
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a>
 <marquee>本页面最后由xieyeheng维护于2022.10.15</marquee>
