--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a> 
 <p> </p>
 <p>还有一些文章在洛谷博客上，有时间会转移</p>
-<a href="https://xieyeheng.blog.luogu.com.cn">我的洛谷博客</a> 
+<a href="https://xieyeheng.blog.luogu.org/">我的洛谷博客</a> 
 <p> </p>
   
 <h2>想了解我和我附近的人？</h2>
