--- a/software/index.html
+++ b/software/index.html
@@ -1,5 +1,10 @@
 <body background="../bg.jpg">
 <body bgcolor="Tan">
 <h1>软件库</h1>
-
-  <p>待填坑</p>
+  <a href="https://xieyeheng.github.io/software/ChromeSetup.exe">国内版Chrome</a>
+  <p> </p>
+  <a href="https://xieyeheng.github.io/software/Global_ChromeSetup.exe">国际版Chrome</a>
+  <p> </p>
+  <a href="https://xieyeheng.github.io/software/ctfile_setup_win">城通网盘客户端</a>
+  <p> </p>
+  <p>待补充</p>
