--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <p> </p>
 <a href="https://xieyeheng.github.io/music.html">一些音乐</a> 
 <p> </p>
+<a href="https://xieyeheng.github.io/software/">一些软件</a> 
+<p> </p>
 <p>还有一些文章在洛谷博客上，有时间会转移</p>
 <a href="https://xieyeheng.blog.luogu.org/">我的洛谷博客</a> 
 <p> </p>
