--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <p> </p>
 
 <h2>我的一些文章</h2>
-<a href="https://xieyeheng.github.io/proxy.html">如何翻墙？</a>
+<a href="https://xieyeheng.github.io/proxy/">如何翻墙？</a>
 <p> </p>
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a> 
 <p> </p>
@@ -67,4 +67,4 @@
 <p> </p>
 
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a>
-<marquee>本页面最后由xieyeheng维护于2022.10.16</marquee>
+<marquee>本页面最后由xieyeheng维护于2022.10.16（项目结构正在处于重构阶段，可能有页面会出现404错误，如遇问题，可联系我反馈）</marquee>
