--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--作者：xieyeheng-->
   
-<body background="bg.jpg">
+<body background="/image/bg.jpg">
 <body bgcolor="Tan">
 <font color="black">
 
