--- a/why-not-gmail.html
+++ b/why-not-gmail.html
@@ -1,4 +1,4 @@
-<body background="bg.jpg">
+<body background="/image/bg.jpg">
 <body bgcolor="Tan">
 <h1>原因如下：</h1>
 <p>因为不番羽墙用不了Gmail，想更新邮件还要翻墙</p>
