--- a/about/dormitory.html
+++ b/about/dormitory.html
@@ -1,5 +1,5 @@
 <title>关于我的宿舍</title>
-<body background="/image/bg.jpg">
+<body background="../image/bg.jpg">
 <h1>这里是一些我宿舍（621）的东西</h1>
 <p>这是</p>
 <img src="图片url" alt="文字text">
