--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 <p> </p>
   
 <h2>想了解我和我附近的人？</h2>
-<a href="https://xieyeheng.github.io/dormitory.html">我们宿舍</a>
+<a href="https://xieyeheng.github.io/about/dormitory.html">我们宿舍</a>
 <p> </p>
-<a href="https://xieyeheng.github.io/primary-school-classmate.html">我的小学同学</a>
+<a href="https://xieyeheng.github.io/about/primary-school-classmate.html">我的小学同学</a>
 <p> </p>
-<a href="https://xieyeheng.github.io/school.html">我们学校</a>
+<a href="https://xieyeheng.github.io/about/school.html">我们学校</a>
 <p> </p>
   
 <h2>要联系我？</h2>
@@ -67,4 +67,4 @@
 <p> </p>
 
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a>
-<marquee>本页面最后由xieyeheng维护于2022.10.16（项目结构正在处于重构阶段，可能有页面会出现404错误，如遇问题，可联系我反馈）</marquee>
+<marquee>本页面最后由xieyeheng维护于2022.10.16（项目结构正在处于重构阶段，可能有页面会出现404错误或不出现图片/背景，如遇问题，可联系我反馈）</marquee>
