--- a/software/index.html
+++ b/software/index.html
@@ -1,4 +1,4 @@
-<body background="../bg.jpg">
+<body background="../image/bg.jpg">
 <body bgcolor="Tan">
 <h1>软件库</h1>
   <a href="https://xieyeheng.github.io/software/ChromeSetup.exe">国内版Chrome</a>
