--- a/proxy/index.html
+++ b/proxy/index.html
@@ -1,4 +1,4 @@
-<body background="../bg.jpg">
+<body background="../image/bg.jpg">
 <body bgcolor="Tan">
 <h1>翻墙教程</h1>
   <a href="https://xieyeheng.github.io/proxy/proxy-windows.html">翻墙教程传送门（Windows）</a>
