--- a/index.html
+++ b/index.html
@@ -67,4 +67,4 @@
 <p> </p>
 
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a>
-<marquee>本页面最后由xieyeheng维护于2022.10.16（项目结构正在处于重构阶段，可能有页面会出现404错误或不出现图片/背景，如遇问题，可联系我反馈）</marquee>
+<marquee>本页面最后由xieyeheng维护于2022.10.16（项目结构正在处于重构阶段，可能有页面会出现404错误或不出现图片/背景，如遇问题，可联系我反馈，两天上100个提交，肝都快爆了）</marquee>
