--- a/proxy/proxy-android.html
+++ b/proxy/proxy-android.html
@@ -1,4 +1,16 @@
 <body background="../image/bg.jpg">
 <body bgcolor="Tan">
 <h1>翻墙教程 · Android / HarmonyOS篇</h1>
-<p>待填坑</p>
+  <p> </p>
+  <h2>Step1 · 下载软件 </h2>
+  <p>本教程使用Clash for Android（CFA）作为代理软件</p>
+  <a href="https://clashforandroid.org/clash-for-android-download/">CFA的地址，建议下载最新的版本</a>
+  <p> </p>
+  <h2>Step2 · 安装CFW</h2>
+  <p>安装CFA</p>
+  <h2>Step3 · 配置CFW</h2>
+  <p>找一个代理网站，并将代理配置导入CFW中</p>
+  <p>在任务栏找到CFW,右键单击</p>
+  <p>代理模式选择全局模式，此时通知栏会有CFA的实时网速</p>
+  <h1>Step4 · 完成</h1>
+  <p>代理设置成功，可以上外网了！</p>
