--- a/proxy/proxy-windows.html
+++ b/proxy/proxy-windows.html
@@ -12,6 +12,6 @@
   <p>找一个代理网站，并将代理配置导入CFW中</p>
   <p>在任务栏找到CFW,右键单击</p>
   <p>代理模式选择全局模式，此时CFW的任务栏图标会变黄</p>
-  <h1>Step4 ` 完成</h1>
+  <h1>Step4 · 完成</h1>
   <p>代理设置成功，可以上外网了！</p>
 
