--- a/proxy/proxy-android.html
+++ b/proxy/proxy-android.html
@@ -4,7 +4,7 @@
   <p> </p>
   <h2>Step1 · 下载软件 </h2>
   <p>本教程使用Clash for Android（CFA）作为代理软件</p>
-  <a href="https://clashforandroid.org/clash-for-android-download/">CFA的地址，建议下载最新的版本</a>
+  <a href="https://github.com/Kr328/ClashForAndroid/">CFW的Github项目地址，建议下载最新的Release</a>
   <p> </p>
   <h2>Step2 · 安装CFW</h2>
   <p>安装CFA</p>
