--- a/proxy/proxy-android.html
+++ b/proxy/proxy-android.html
@@ -4,7 +4,10 @@
   <p> </p>
   <h2>Step1 · 下载软件 </h2>
   <p>本教程使用Clash for Android（CFA）作为代理软件</p>
-  <a href="https://github.com/Kr328/ClashForAndroid/">CFW的Github项目地址，建议下载最新的Release</a>
+  <a href="https://github.com/Kr328/ClashForAndroid/">CFA的Github项目地址，建议下载最新的Release</a>
+  <p> </p>
+  <p>有能力访问Play Store的，可以从Play Store上下载</p>
+  <a href="ttps://play.google.com/store/apps/details?id=com.github.kr328.clash">CFA的Play Store地址</a>
   <p> </p>
   <h2>Step2 · 安装CFW</h2>
   <p>安装CFA</p>
