--- a/proxy/proxy-android.html
+++ b/proxy/proxy-android.html
@@ -9,11 +9,10 @@
   <p>有能力访问Play Store的，可以从Play Store上下载</p>
   <a href="ttps://play.google.com/store/apps/details?id=com.github.kr328.clash">CFA的Play Store地址</a>
   <p> </p>
-  <h2>Step2 · 安装CFW</h2>
+  <h2>Step2 · 安装CFA</h2>
   <p>安装CFA</p>
-  <h2>Step3 · 配置CFW</h2>
+  <h2>Step3 · 配置CFA</h2>
   <p>找一个代理网站，并将代理配置导入CFW中</p>
-  <p>在任务栏找到CFW,右键单击</p>
   <p>代理模式选择全局模式，此时通知栏会有CFA的实时网速</p>
   <h1>Step4 · 完成</h1>
   <p>代理设置成功，可以上外网了！</p>
