--- a/proxy/proxy-ios.html
+++ b/proxy/proxy-ios.html
@@ -1,4 +1,9 @@
 <body background="../image/bg.jpg">
 <body bgcolor="Tan">
 <h1>翻墙教程 · iOS篇</h1>
-<p>待填坑</p>
+  <h2>前言 & 准备</p2>
+  <p>划掉：像我这种爱国者都是用华为的，iOS教程狗都不屑</p>
+  <p>准备一个美区的Apple账号</p>
+  <h2>Step</h2>
+  <p></p>
+  <p>待填坑</p>
