--- a/proxy/proxy-ios.html
+++ b/proxy/proxy-ios.html
@@ -4,6 +4,9 @@
   <h2>前言 & 准备</p2>
   <p>划掉：像我这种爱国者都是用华为的，iOS教程狗都不屑</p>
   <p>准备一个美区的Apple账号</p>
-  <h2>Step</h2>
+  <h2>Step1 · 下载代理软件</h2>
+  <p>到美区的App Store下载Shadowrocket</p>
+  <a href="https://apps.apple.com/us/app/shadowrocket/id932747118">App Store地址</a>
   <p></p>
+  <h2>Step2 · 配置</h2>
   <p>待填坑</p>
