--- a/proxy/proxy-ios.html
+++ b/proxy/proxy-ios.html
@@ -9,4 +9,7 @@
   <a href="https://apps.apple.com/us/app/shadowrocket/id932747118">App Store地址</a>
   <p></p>
   <h2>Step2 · 配置</h2>
-  <p>待填坑</p>
+  <p>找一个代理网站，将代理配置导入Shadowrocket</p>
+  <h2>Step3 · 完成</h2>
+  <p>按Shadowrocket最上面的按钮开始代理</p>
+  <p>代理设置成功，可以上外网了！</p>
