--- a/proxy/proxy-ios.html
+++ b/proxy/proxy-ios.html
@@ -3,11 +3,14 @@
 <h1>翻墙教程 · iOS篇</h1>
   <h2>前言 & 准备</p2>
   <p>划掉：像我这种爱国者都是用华为的，iOS教程狗都不屑</p>
-  <p>准备一个美区的Apple账号</p>
-  <h2>Step1 · 下载代理软件</h2>
+  <p>准备一个美区或港区的Apple账号</p>
+  <h2>Step1 · 下载并安装代理软件</h2>
   <p>到美区的App Store下载Shadowrocket</p>
-  <a href="https://apps.apple.com/us/app/shadowrocket/id932747118">App Store地址</a>
+  <a href="https://apps.apple.com/us/app/shadowrocket/id932747118">美区App Store地址</a>
   <p></p>
+  <a href="https://apps.apple.com/hk/app/shadowrocket/id932747118">港区App Store地址</a>
+  <p></p>
+  <a href="https://github.com/Shadowrocket">Shadowrocket的Github仓库地址</a>
   <h2>Step2 · 配置</h2>
   <p>找一个代理网站，将代理配置导入Shadowrocket</p>
   <h2>Step3 · 完成</h2>
