--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <p> </p>
 <a href="https://github.com/xieyeheng">Github · xieyeheng</a>
   <p> </p>
-<a href="https://facebook.com/">Facebook · xieyeheng@outlook.com</a>
+<a href="https://www.facebook.com/profile.php?id=100086167223646">Facebook · Yeheng Xie</a>
   <p> </p>
-<a href="https://twitch.com/">Twitch · vellichor0979</a>
+<a href="https://www.twitch.tv/vellichor0979">Twitch · vellichor0979</a>
   <p> </p>
-<a href="https://twitter.com/">Twitter · 中国之鳖</a>
+<a href="https://twitter.com/Vellochor0979">Twitter · 中国之鳖</a>
   <p> </p>
-<a href="https://discord.com/">Discord · xieyeheng@outlook.com</a>
+<a href="https://discord.com/">Discord · xieyeheng #7725</a>
   <p> </p>
 <a href="https://wechat.com/">Wechat · Vellichor</a>
   <p> </p>
