--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
 <body background="/image/bg.jpg">
 <body bgcolor="Tan">
-<font color="black">
+<font color="white">
 
 <meta charset="utf-8">
 <title>主页</title>
@@ -67,6 +67,10 @@
 <p> </p>
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a>
 <p> </p>
+  <p>反馈问题请到Github的Issues板块</p>
+  <p> </p>
+  <a href="https://github.com/xieyeheng/xieyeheng.github.io/issues">Issues传送门</p>
+  <p> </p>
 <img src="https://badges.toozhao.com/badges/01GFG3FC1HC3WFSFHKTA16VVCV/green.svg" />
 <p> </p>
 
