--- a/software/index.html
+++ b/software/index.html
@@ -7,4 +7,6 @@
   <p> </p>
   <a href="https://xieyeheng.github.io/software/ctfile_setup_win">城通网盘客户端</a>
   <p> </p>
-  <p>待补充</p>
+  <p>由于放在Github的软件下载太慢，所以更多软件请访问：</p>
+  <a href="https://workdrive.zoho.com.cn/folder/847us85d9675192f04cc2a420440cbb3e6ca1">Zulu Workdrive</a>
+  <p> </p>
