--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <p> </p>
   <p>反馈问题请到Github的Issues板块</p>
   <p> </p>
-  <a href="https://github.com/xieyeheng/xieyeheng.github.io/issues">Issues传送门</p>
+  <a href="https://github.com/xieyeheng/xieyeheng.github.io/issues">Issues传送门</a>
   <p> </p>
 <img src="https://badges.toozhao.com/badges/01GFG3FC1HC3WFSFHKTA16VVCV/green.svg" />
 <p> </p>
