--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <!--作者：xieyeheng-->
   
-<body background="/image/bg.jpg">
-<body bgcolor="Tan">
+html, body {
+    width: 100%;
+    height: 100%;
+}
+body {
+    background-image: linear-gradient(to bottom right, #7A88FF, #7AFFAF);
+}
 
 <meta charset="utf-8">
 <title>主页</title>
