--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--作者：xieyeheng-->
-  
-html, body {
-    width: 100%;
-    height: 100%;
-}
-body {
-    background-image: linear-gradient(to bottom right, #7A88FF, #7AFFAF);
-}
+
+<body background="/image/bg.jpg">
 
 <meta charset="utf-8">
 <title>主页</title>
