--- a/announcement.html
+++ b/announcement.html
@@ -4,4 +4,6 @@
   <p>可能有页面会出现404错误或不出现图片/背景，如遇问题，可联系我反馈，两天上100个提交，肝都快爆了</p>
   <p>别问我为什么那么慢，因为这垃圾电脑一个上午可以蓝屏3次，搞得我一点动力都没有了</p>
   <p>给我打赏助力网站建设（纯献爱心）</p>
+  <p></p>
+   <img src="/images/pay.png" alt="收款码">
   <p>顺便说一下，上网课了，可以嗨了，更新将适当减少</p>
