--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 <h2>我的一些文章</h2>
 <a href="https://xieyeheng.github.io/proxy/">如何翻墙？</a>
 <p> </p>
+<a href="https://xieyeheng.github.io/game/">献给热爱摸鱼的你</a>
+<p> </p>
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a> 
 <p> </p>
 <a href="https://xieyeheng.github.io/music.html">一些音乐</a> 
@@ -74,4 +76,4 @@
   
   <a href="/announcement.html">关于本站的公告</a>
   <p> </p>
-<marquee>本页面最后由xieyeheng维护于2022.10.18</marquee>
+<marquee>本页面最后由xieyeheng维护于2022.10.19</marquee>
