--- a/games/index.html
+++ b/games/index.html
@@ -1,3 +1,11 @@
 <body background="../image/bg.jpg">
+  <h1>多年摸鱼珍藏网站</h1>
   <p>这里有我多年摸鱼所珍藏的网站</p>
-  
+  <h2>1 · Nazo Game</h2>
+  <p>一个解密类型的游戏，比较费脑子</p>
+  <a href="https://nazo.one-story.cn/">Nazo Game</a>
+  <p> </p>
+  <h2>2 · Slither</h2>
+  <p>经典io游戏，是一个贪吃蛇游戏</p>
+  <a href="slither.io/">Slither</a>
+  <p> </p>
