--- a/games/index.html
+++ b/games/index.html
@@ -9,3 +9,15 @@
   <p>经典io游戏，是一个贪吃蛇游戏</p>
   <a href="slither.io/">Slither</a>
   <p> </p>
+  <h2>3 · Yorg</h2>
+  <p>塔防类型io游戏</p>
+  <a href="yorg.io/">yorg</a>
+  <p> </p>
+  <h2>4 · slay</h2>
+  <p>曾经风靡、OI圈的页游，但美中不足的是ping值较高</p>
+  <a href="slay.ont">slay</a>
+  <p> </p>
+  <h2>5 · Robot Storm</h2>
+  <p>也是一个io游戏，没什么好介绍的</p>
+  <a href="robotstorm.io/">robot storn</a>
+  <p> </p>
