--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h2>我的一些文章</h2>
 <a href="https://xieyeheng.github.io/proxy/">如何翻墙？</a>
 <p> </p>
-<a href="https://xieyeheng.github.io/game/">献给热爱摸鱼的你</a>
+<a href="https://xieyeheng.github.io/games/">献给热爱摸鱼的你</a>
 <p> </p>
 <a href="https://xieyeheng.github.io/why-not-gmail.html">关于为什么不推荐发到我的Gmail?</a> 
 <p> </p>
