--- a/games/index.html
+++ b/games/index.html
@@ -19,5 +19,9 @@
   <p> </p>
   <h2>5 · Robot Storm</h2>
   <p>也是一个io游戏，没什么好介绍的</p>
-  <a href="robotstorm.io/">robot storn</a>
+  <a href="robotstorm.io/">robot storm</a>
+  <p> </p>
+  <h2>6 · Generals.io</h2>
+  <p>这是一个io游戏，有很多OIer都玩</p>
+  <a href="generals.io/">Generals.io</a>
   <p> </p>
