--- a/project-github.html
+++ b/project-github.html
@@ -2,5 +2,5 @@
 <body bgcolor="Tan">
   
   <p>本网站源码托管在Github</p>
-  <p访问下面的网站以查看撑起本网站的屎山代码</p>
+  <p>访问下面的网站以查看撑起本网站的屎山代码</p>
   <a href="https://github.com/xieyeheng/xieyeheng.github.io">Github项目地址</a>
