--- a/announcement.html
+++ b/announcement.html
@@ -7,5 +7,5 @@
   <p> </p>
   <p>给我打赏助力网站建设（纯献爱心）</p>
   <p></p>
-   <img src="/images/pay.png" alt="收款码">
+   <img src="/image/pay.png" alt="收款码">
   <p>顺便说一下，上网课了，可以嗨了，更新将适当减少</p>
