--- a/proxy/proxy-windows.html
+++ b/proxy/proxy-windows.html
@@ -5,9 +5,9 @@
   <h2>Step1 · 下载软件 </h2>
   <p>本教程使用Clash for Windows（CFW）作为代理软件</p>
   <a href="https://github.com/Dreamacro/clash">CFW的Github项目地址，建议下载最新的Release</a>
-  <img src="/image/windows/1.png" alt="Clash的GitHub项目">
-  <img src="/image/windows/2.png" alt="Clash的GitHub项目">
-  <img src="/image/windows/3.png" alt="Clash的GitHub项目">
+  <img src="https://xieyeheng.github.io/proxy/image/windows/1.png" alt="Clash的GitHub项目">
+  <img src="https://xieyeheng.github.io/proxy/image/windows/2.png" alt="Clash的GitHub项目">
+  <img src="https://xieyeheng.github.io/proxy/image/windows/3.png" alt="Clash的GitHub项目">
   <p> </p>
   <h2>Step2 · 安装CFW</h2>
   <p>下载并解压完成后打开压缩包中的Clash for Windows.exe并按提示完成安装</p>
