--- a/talk.html
+++ b/talk.html
@@ -1,3 +1,4 @@
+<script>
 <-- 引入 -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
   <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
@@ -19,3 +20,4 @@ var gitalk = new Gitalk({
 })
 
 gitalk.render('gitalk-container')
+  </script>
