--- a/games/index.html
+++ b/games/index.html
@@ -25,3 +25,7 @@
   <p>这是一个io游戏，有很多OIer都玩</p>
   <a href="generals.io/">Generals.io</a>
   <p> </p>
+  <h2>7 · Yorg 3</h2>
+  <p>yorg的升级版本，有着更加精美的画面与更加平衡的搭配</p>
+  <a href="yorg3.io">Yorg 3</a>
+  <p> </p>
