--- a/proxy/proxy-windows.html
+++ b/proxy/proxy-windows.html
@@ -10,9 +10,12 @@
   <img src="https://xieyeheng.github.io/proxy/image/windows/3.png" alt="Clash的GitHub项目">
   <p> </p>
   <h2>Step2 · 安装CFW</h2>
-  <p>下载并解压完成后打开压缩包中的Clash for Windows.exe并按提示完成安装</p>
+  <p>下载并解压完成后打开压缩包中的Clash for Windows.exe</p>
+  <p>首次打开会自动配置</p>
   <h2>Step3 · 配置CFW</h2>
   <p>找一个代理网站，并将代理配置导入CFW中</p>
+  <p>不是我不分享，只因</p>
+  <img src="https://xieyeheng.github.io/proxy/image/no-share.png" alt="谢绝分享">
   <p>在任务栏找到CFW,右键单击</p>
   <p>代理模式选择全局模式，此时CFW的任务栏图标会变黄</p>
   <h1>Step4 · 完成</h1>
