--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 <a href="https://music.163.com/#/user/home?id=5086169358">网易云音乐 · _砂哔</a>
   <p> </p>
 
-<h2>我的一些文章</h2>
+<h2>我的一些文章（因为太丑，所以在重写。。。）</h2>
+  
+  
 <a href="https://xieyeheng.github.io/proxy/">如何翻墙？</a>
 <p> </p>
 <a href="https://xieyeheng.github.io/games/">献给热爱摸鱼的你</a>
@@ -77,4 +79,4 @@
   <a href="/announcement.html">关于本站的公告</a>
   <p> </p>
   
-<marquee>本页面最后由xieyeheng维护于2022.10.29</marquee>
+<marquee>本页面最后由xieyeheng维护于2022.11.12</marquee>
