--- a/announcement.html
+++ b/announcement.html
@@ -1,7 +1,7 @@
 <body background="/image/bg.jpg">
 
-  <p>由于我是傻逼，开始时把全部文件都堆到根目录，所以项目结构正在处于重构阶段</p>
-  <p>可能有页面会出现404错误或不出现图片/背景，如遇问题，可联系我反馈，两天上100个提交，肝都快爆了</p>
+  <p>由于我是傻逼，开始时拿html直接写文章，所以项目结构正在处于第二次重构阶段</p>
+  <p>可能有页面会出现404错误，如遇问题，可联系我反馈，两天上100个提交，肝都快爆了</p>
   <p>别问我为什么那么慢，因为这垃圾电脑一个上午可以蓝屏3次，搞得我一点动力都没有了</p>
   <a href="/project-github.html">Github储存库</a>
   <p> </p>
