--- a/announcement.html
+++ b/announcement.html
@@ -8,4 +8,5 @@
   <p>给我打赏助力网站建设（纯献爱心）</p>
   <p></p>
    <img src="/image/pay.png" alt="收款码">
+<p>感谢猪哥在2022/11/16打赏了1RMB</p>
   <p>顺便说一下，上网课了，可以嗨了，更新将适当减少</p>
